阿里云部署

--- a/.github/workflows/doc-build.yml
+++ b/.github/workflows/doc-build.yml
@@ -57,3 +57,12 @@ jobs:
         with:
           name: doc_zh-cn
           path: web/html/zh-cn
+
+      - name: 部署到阿里云
+        uses: fangbinwei/aliyun-oss-website-action@v1
+        with:
+          accessKeyId: ${{ secrets.ALIYUN_ACCESS_KEY_ID }}
+          accessKeySecret: ${{ secrets.ALIYUN_ACCESS_KEY_SECRET }}
+          bucket: pnx-doc
+          endpoint: oss-cn-hongkong.aliyuncs.com
+          folder: web/html/zh-cn
