--- a/.github/workflows/doc-build.yml
+++ b/.github/workflows/doc-build.yml
@@ -27,7 +27,7 @@ jobs:
     name: 渲染markdown文件
     runs-on: ubuntu-latest
     needs: check-files
-    if: (contains(needs.check-files.outputs.changed-files, 'web/') || contains(needs.check-files.outputs.changed-files, 'PowerNukkitX/') || (github.event_name == 'push' && contains(github.event.commits[0].message, '+b')) || (github.event_name == 'workflow_dispatch')
+    if: contains(needs.check-files.outputs.changed-files, 'web/') || contains(needs.check-files.outputs.changed-files, 'PowerNukkitX/') || (github.event_name == 'push' && contains(github.event.commits[0].message, '+b')) || (github.event_name == 'workflow_dispatch')
 
     steps:
       - uses: actions/checkout@v1
