修改构建脚本以防止分支部署

--- a/.github/workflows/doc-build.yml
+++ b/.github/workflows/doc-build.yml
@@ -60,6 +60,7 @@ jobs:
 
       - name: 部署中文文档
         uses: fangbinwei/aliyun-oss-website-action@v1
+        if: (github.ref_name == 'master') && success()
         with:
           accessKeyId: ${{ secrets.ALIYUN_ACCESS_KEY_ID }}
           accessKeySecret: ${{ secrets.ALIYUN_ACCESS_KEY_SECRET }}
